<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/app_background"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="30dp"
        android:layout_gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textAlignment="center"
            android:text="@string/text_new_request"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/merchantName"
            android:hint="@string/merchant_name"
            android:textColorHint="@color/white"
            android:textAlignment="center"
            android:layout_marginTop="30dp"
            android:textColor="@color/white"
            android:padding="8dp"
            android:background="@drawable/edittext_search_shape"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:id="@+id/merchantDesc"
            android:textAlignment="center"
            android:hint="@string/merchant_description"
            android:textColorHint="@color/white"
            android:layout_marginTop="30dp"
            android:textColor="@color/white"
            android:background="@drawable/edittext_search_shape"/>

        <LinearLayout
            android:id="@+id/newMerchant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="70dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textAlignment="center"
                android:text="@string/text_receive_email"/>
            <Button
                android:id="@+id/send_request"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_transparent"
                android:text="@string/btn_send"
                android:textColor="@color/white"/>

        </LinearLayout>

    </LinearLayout>




</LinearLayout>